--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
